# seli

./: .gitignore  README.md
seli/: CMakeLists.txt  package.xml
seli_bringup/: CMakeLists.txt  package.xml
seli_bringup/launch/: bringup.launch.py
seli_description/: CMakeLists.txt  package.xml
seli_description/launch/: description.launch.py
seli_description/meshes/: body.stl  lower_leg.stl  upper_leg_lf.stl  upper_leg_lh.stl  upper_leg_rf.stl  upper_leg_rh.stl
seli_description/rviz/: seli.rviz
seli_description/urdf/: leg.urdf.xacro  properties.urdf.xacro  seli.urdf  seli.urdf.xacro
